# cicada

./: AppReqs.cpp  AppReqs.hpp  AppTest.cpp  AppTest.hpp  ApplicationRequirements.hpp  CMakeCache.txt  CMakeLists.txt  DebugOut.cpp  DebugOut.hpp  Error.cpp  Error.hpp  FeatureFunction.cpp  FeatureFunction.hpp  FileIO.hpp  Generator.cpp  JsonIO.cpp  JsonIO.hpp  Logger.cpp  Logger.hpp  Main.cpp  Makefile.am  MultiByteTokenizer.cpp  MultiByteTokenizer.hpp  Optimization.cpp  Optimization.hpp  Optimizer.cpp  Optimizer.hpp  README.md  SemiCrf.cpp  SemiCrf.hpp  SemiCrfData.cpp  SemiCrfData.hpp  Signal.cpp  Signal.hpp  W2V.cpp  W2V.hpp  bd2c.cpp  bd2w  bdc2e.cpp  configure.ac  (+1 more)
dic/: job.txt
doc/: spec.md  test_spec.md
generator/: Generator.cpp  Makefile
rtest/: 02ff72fa63add0cd.html  044539b691204dcd.html  0cd6f17aec5899c7.html  14416a08c5a9b926.html  1c52e1f96f3a3a08.html  2471b501418402e2.html  27b62192221f179e.html  31ab570617c735d1.html  3710a0af5fec95c9.html  5475bd27921f7ea9.html  590bd694608c67ab.html  605624aa458ea0c6.html  61698eff64fdd9cb.html  6ac00f765399b136.html  70aa7c762a0a0a18.html  7503f280a4b2af3c.html  76a24d6d68d7650f.html  77adcff2f7c45776.html  7de454dd476b60ac.html  87ef9fbb4566746e.html  8c69f07d0b731092.html  8f15429129e10740.html  935ecbf0e73d351f.html  9565259e79069401.html  Makefile  a2fb2a78ab3535d1.html  a4d1ae40111a19e2.html  a75001d37fcf72f5.html  aa69bf79b034eaf1.html  afe9fdd85e915cd7.html  b01df03d39b14d51.html  b4eedd4f7ef60ab6.html  b6ae5d8c74575cbc.html  bf6173d2216db4bd.html  body.json  c5ddc74a0c0b1cc7.html  d52404eb286f7780.html  da74ae14f81f8398.html  dcc37ef3619217e0.html  e53e04c8f92ae251.html  (+5 more)
rtest/ref/: 044539b691204dcd.html.json  0cd6f17aec5899c7.html.json  14416a08c5a9b926.html.json  1c52e1f96f3a3a08.html.json  2471b501418402e2.html.json  27b62192221f179e.html.json  31ab570617c735d1.html.json  3710a0af5fec95c9.html.json  5475bd27921f7ea9.html.json  590bd694608c67ab.html.json  605624aa458ea0c6.html.json  61698eff64fdd9cb.html.json  6ac00f765399b136.html.json  70aa7c762a0a0a18.html.json  7503f280a4b2af3c.html.json  76a24d6d68d7650f.html.json  77adcff2f7c45776.html.json  7de454dd476b60ac.html.json  87ef9fbb4566746e.html.json  8c69f07d0b731092.html.json  8f15429129e10740.html.json  935ecbf0e73d351f.html.json  9565259e79069401.html.json  a2fb2a78ab3535d1.html.json  a4d1ae40111a19e2.html.json  a75001d37fcf72f5.html.json  aa69bf79b034eaf1.html.json  afe9fdd85e915cd7.html.json  b01df03d39b14d51.html.json  b4eedd4f7ef60ab6.html.json  b6ae5d8c74575cbc.html.json  bf6173d2216db4bd.html.json  c5ddc74a0c0b1cc7.html.json  d52404eb286f7780.html.json  da74ae14f81f8398.html.json  dcc37ef3619217e0.html.json  e53e04c8f92ae251.html.json  e6e7a3baab0d3a01.html.json  ecf7d5c8caba28b2.html.json  ed9d1d940ccabdbb.html.json  (+1 more)
test_data/: Makefile  body0.json  body1.json  check1.json  check10.json  check12.json  check13.json  check13_output.json  check14.json  check2.json  check3  check3.json  check4  check4.json  check5  check5.json  check6  check6.json  check7  check7.json  example1  hoge.txt  labels0.json  p0.json  p1.json  result0.txt  result1.txt  t0.json  t1.json  test0.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  (+7 more)
test_data/answer/: bdc2e.json  bdc2e_result.json  body1.txt  check10_output.json  check11_output.json  check13_output.json  check8.json  log1  result0.txt  result1.txt  result11.txt  result13.txt  result15.txt  result16.txt  result17.txt  result18.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  result9.txt  simple_output.json  simple_output3.json  simple_output4.json  test16.json  test16.txt  test17.json  test17.txt  test18.json  test19.json  test19.txt  weight10.txt  weight12.txt  weight14.txt  weight16.txt  weight17.txt  weight18.txt  weight4.txt  weight5.txt  (+2 more)
